Added the font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <body>
         <div class="container">
             <div class="h1">Starter Project</div>
+            <p>Sss <i class="fa fa-snowflake-o"></i></p>
         </div>
         <div id="app"></div>
         <script src="/bundle.js"></script>
